frontend for the tic-tac-toe game completed

--- a/index.html
+++ b/index.html
@@ -12,6 +12,66 @@
   <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
+    <div class="content">
+
+      <div class="info">
+        <h3>It's player 1's turn...</h3>
+      </div>
+
+      <div class="landing-page dispay">
+        <div class="tic-tac-logo">
+          <span class="ply-1">O</span>
+          <span class="ply-2">X</span>
+        </div>
+        <div class="call-to-action-buttons">
+          <button type="button" name="button" class="my-float">Multiplayer</button>
+          <button type="button" name="button" class="my-float">Computer</button>
+          <button type="button" name="button" class="my-float"> New book</button>
+        </div>
+      </div>
+
+      <div class="gameboard-page display">
+        <div class="grid-box">
+          <div class="row row-1">
+            <div class="grid grid-1">
+              <h1>O</h1>
+            </div>
+            <div class="grid grid-2">
+              <h1>X</h1>
+            </div>
+            <div class="grid grid-3">
+              <h1>O</h1>
+            </div>
+          </div>
+
+          <div class="row row-2">
+            <div class="grid grid-1">
+              <h1>O</h1>
+            </div>
+            <div class="grid grid-2">
+              <h1>X</h1>
+            </div>
+            <div class="grid grid-3">
+              <h1>O</h1>
+            </div>
+          </div>
+
+          <div class="row row-3">
+            <div class="grid grid-1">
+              <h1>O</h1>
+            </div>
+            <div class="grid grid-2">
+              <h1>X</h1>
+            </div>
+            <div class="grid grid-3">
+              <h1>O</h1>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
 
 
   </body>
